# go-installer

./: .gitignore  .goreleaser.yml  Cargo.toml  Makefile  README.md  test.sh
.github/workspaces/: release.yml
src/: main.rs
test/: Dockerfile  docker-compose.yml
